# Zebra-Patient-Label-Printer

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
src/: main.rs
